# DocNexus

./: .gitignore  README.md  ROADMAP.md  Todo  build_debug_full.txt  debug_final.txt  make.cmd  make.ps1  pyproject.toml  requirements.txt  run.py  setup.py
docnexus/: __init__.py  app.py  cli.py  version_info.py
docnexus/core/: loader.py  logging_config.py  plugin_interface.py  registry.py  renderer.py
docnexus/features/: registry.py
docnexus/plugins/editor/: plugin.py
docnexus/plugins/pdf_export/: installer.py  plugin.py
docnexus/plugins/word_export/: plugin.py
docnexus/static/: extensions.css  settings_menu.css  theme.css  theme.js
docnexus/templates/: docs.html  extensions.html  index.html  view.html
docnexus/templates/components/: header_brand.html  settings_menu.html
docs/: BUILD.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  DOCNEXUS_ARCHITECTURE.docx  DOCNEXUS_ARCHITECTURE.md  PLUGIN_ARCHITECTURE.md  PLUGIN_DEVELOPMENT.md  PLUGIN_DEV_GUIDE.md  README.md  STRUCTURE.md  TESTING.md  USER_GUIDE.md
docs/examples/: feature_test_v1.2.6.md
examples/: UserGuide.md.bak  Welcome.md.bak  pipeline_test.md
releases/DocNexus_v1.2.4/: plugins.json
releases/DocNexus_v1.2.4/docs/: CONTRIBUTING.md  DOCNEXUS_ARCHITECTURE.md  KEY_DECISIONS.md  PLUGIN_DEVELOPMENT.md  README.md  SCRIPTS.md  STRUCTURE.md  TESTING.md  USER_GUIDE.md
releases/DocNexus_v1.2.5/docs/: QUICKSTART.md  USER_GUIDE.md
releases/archive/DocNexus_v1.2.5/docs/: USER_GUIDE.md
scripts/: build.py  check_pdf_only.py  generate_refactor_test.py  run_tests.py
tests/: repro_footnote.py  test_editor_api.py  test_export_headless.py  test_extensions_api.py  test_features.py  test_loader.py  test_pdf_export_integration.py  test_pdf_safe_mode.py  test_plugin_integration.py  test_registry.py  verify_hot_reload.py  verify_pdf_block.py  verify_uninstall_hot_reload.py  verify_word_export.py
tests/fixtures/plugins/dummy_plugin/: plugin.py
tools/: append_test.py  check_dpi.py  debug_pdf.py  debug_renderer.py  test_pdf_unicode.py  test_pil_emoji.py  test_table_wrap.py  tune_emojis.py  visual_matrix.py
