[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docnexus"
version = "1.0.0"
description = "OmniDoc - The Ultimate All-in-One Document Engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU Affero General Public License v3 (AGPLv3)"}
authors = [
    {name = "OmniDoc Maintainers", email = "maintainers@omnidoc.org"}
]
keywords = ["markdown", "documentation", "viewer", "executive", "presentation", "toc", "mermaid", "diagrams"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Flask",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
]

dependencies = [
    "Flask>=3.0.0",
    "markdown>=3.5.0",
    "Pygments>=2.17.0",
    "pymdown-extensions>=10.7",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
docnexus = "docnexus.cli:main"

[project.urls]
Homepage = "https://github.com/omnidoc-org/docnexus"
Documentation = "https://github.com/omnidoc-org/docnexus/tree/main/docs"
Repository = "https://github.com/omnidoc-org/docnexus.git"
Changelog = "https://github.com/omnidoc-org/docnexus/blob/main/docs/CHANGELOG.md"
"Bug Tracker" = "https://github.com/omnidoc-org/docnexus/issues"

[tool.setuptools]
packages = ["docnexus", "docnexus.core", "docnexus.features"]

[tool.setuptools.package-data]
docnexus = ["templates/*.html"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
